--- a/app/globals.css
+++ b/app/globals.css
@@ -7,21 +7,10 @@
   --foreground: #171717;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.text-outline {
+  text-shadow: 
+    2px 2px 0 rgba(0, 0, 0, 2),   /* Black outline */
+    -2px -2px 0 rgba(0, 0, 0, 2),
+    2px -2px 0 rgba(0, 0, 0, 2),
+    -2px 2px 0 rgba(0, 0, 0, 2);
 }
